--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div>
             <h1>ОСТАЛИСЬ ВОПРОСЫ ИЛИ <br>
             ГОТОВЫ ОБСУДИТЬ ДЕТАЛИ?</h1>
-            <img src="/images/fon9.png" alt="Fon-image-9">
+            <img src="./images/fon9.png" alt="Fon-image-9">
         </div>
     </div>
 
