--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="header1">
-            <img src="/images/logo.png" alt="logo" class="sherlok-logo">
-            <img src="/images/near-logo.png" alt="Sherlok" class="sherlok">
+            <img src="./images/logo.png" alt="logo" class="sherlok-logo">
+            <img src="./images/near-logo.png" alt="Sherlok" class="sherlok">
         </div>
         <div class="header2">
-            <a href="tel:+798654321"><img src="/images/call.png" alt="call"></a>
-            <a href="http://telegram.org"><img src="/images/telegram.png" alt="telegram"></a>
+            <a href="tel:+798654321"><img src="./images/call.png" alt="call"></a>
+            <a href="http://telegram.org"><img src="./images/telegram.png" alt="telegram"></a>
         <div class="header2-2">
             <p>Наша почта: <br>
                 <a href="mailto:a@gmail.com">hello@shedoc<span>.ru</span></a></p>
@@ -31,7 +31,7 @@
     <div class="main">
         <div class="main2">
             
-            <h1><img src="/images/sherdoc.png" alt="sherdoc" class="main2-img">
+            <h1><img src="./images/sherdoc.png" alt="sherdoc" class="main2-img">
                 <span>- сервис для <br>
                 организации лечения <br>
                 по ОМС в России</h1></span>
@@ -40,13 +40,13 @@
             <button>Узнать больше</button>
         </div>
         <div class="main3">
-            <img src="/images/fon.png" alt="Fon-image">
+            <img src="./images/fon.png" alt="Fon-image">
         </div>
     </div>
 
     <div class="second-main">
         <div>
-            <img src="/images/fon2.png" alt="Fon-image-2">
+            <img src="./images/fon2.png" alt="Fon-image-2">
         </div>
         <div class="second-main2">
             <h1>ВАМ ЭТО ЗНАКОМО?</h1>
@@ -65,18 +65,18 @@
     <div class="tr-main">
         <div class="tr-main2">
             <h1>Госпитализация - <br>это элементарно</h1>
-            <p><span class="service">Сервис</span> <img src="/images/sherdoc 2.png" alt="Fon-logo">- это бот в Telegram и WhatsApp, который возьмет <br>
+            <p><span class="service">Сервис</span> <img src="./images/sherdoc 2.png" alt="Fon-logo">- это бот в Telegram и WhatsApp, который возьмет <br>
                 на себя весь процесс согласования и переговоров о госпитализации, <br>
                 Вам остается только найти пациента и заполнить заявку.</p>
         </div>
         <div>
-            <img src="/images/fon3.png" alt="Fon-image-3">
+            <img src="./images/fon3.png" alt="Fon-image-3">
         </div>
     </div>
 
     <div class="fr-main">
         <div>
-            <img src="/images/fon4.png" alt="Fon-image-4">
+            <img src="./images/fon4.png" alt="Fon-image-4">
         </div>
         <div>
             <h1>ГОСПИТАЛИЗАЦИЯ – <br>ЭТО БЫСТРО!</h1>
@@ -105,13 +105,13 @@
             прикрепления.</span></p>
         </div>
         <div>
-            <img src="/images/fon5.png" alt="Fon-image-5">
+            <img src="./images/fon5.png" alt="Fon-image-5">
         </div>
     </div>
 
     <div class="six-main">
         <div>
-            <img src="/images/fon6.png" alt="Fon-image-6">
+            <img src="./images/fon6.png" alt="Fon-image-6">
         </div>
         <div>
             <h1>ЗАЧЕМ МНЕ ЭТО?</h1>
@@ -123,7 +123,7 @@
 
     <div class="sev-main">
         <div>
-            <h1>КОГДА ЗАРПЛАТА,<br><img src="/images/sherdoc 4.png" alt="SHERDOC"></h1>
+            <h1>КОГДА ЗАРПЛАТА,<br><img src="./images/sherdoc 4.png" alt="SHERDOC"></h1>
             <p>Выплата вознаграждений за состоявшиеся <br>
                 госпитализации в текущем месяце производится <br>
                 автоматически <span>до 10 числа </span>следующего месяца.</p>
@@ -132,14 +132,14 @@
                 приглашенных коллег всегда доступны в интерфейсе бота</p>
         </div>
         <div>
-            <img src="/images/fon7.png" alt="Fon-image-7">
+            <img src="./images/fon7.png" alt="Fon-image-7">
         </div>
     </div>
 
     <div class="main-top">
         <h1>ВАШИ ПРЯМЫЕ <br>ВЫГОДЫ</h1>
         <span>
-        <img src="/images/reddot.png" alt="Red-dot">
+        <img src="./images/reddot.png" alt="Red-dot">
         <h6>Без подводных камней</h6></span>
         <p>Количество госпитализаций по Вашим <br>
         заявкам всегда можно посмотреть в <br>
@@ -149,14 +149,14 @@
     <div class="e-main">
         <div class="e-main1">
         <span>
-        <img src="/images/reddot.png" alt="Red-dot">
+        <img src="./images/reddot.png" alt="Red-dot">
         <h6>Без подводных камней</h6></span>
         <p>Количество госпитализаций по Вашим <br>
         заявкам всегда можно посмотреть в <br>
         интерфейсе бота, все прозрачно</p>
 
         <span>
-        <img src="/images/reddot.png" alt="Red-dot">
+        <img src="./images/reddot.png" alt="Red-dot">
         <h6>Без подводных камней</h6></span>
         <p>Количество госпитализаций по Вашим <br>
         заявкам всегда можно посмотреть в <br>
@@ -165,20 +165,20 @@
 
 
         <div class="e-main-fon">
-            <img src="/images/fon8.png" alt="Fon-image-8">
+            <img src="./images/fon8.png" alt="Fon-image-8">
         </div>
 
 
         <div class="e-main1">
         <span>
-        <img src="/images/reddot.png" alt="Red-dot">
+        <img src="./images/reddot.png" alt="Red-dot">
         <h6>Без подводных камней</h6></span>
         <p>Количество госпитализаций по Вашим <br>
         заявкам всегда можно посмотреть в <br>
         интерфейсе бота, все прозрачно</p>
 
         <span>
-        <img src="/images/reddot.png" alt="Red-dot">
+        <img src="./images/reddot.png" alt="Red-dot">
         <h6>Без подводных камней</h6></span>
         <p>Количество госпитализаций по Вашим <br>
         заявкам всегда можно посмотреть в <br>
@@ -202,9 +202,9 @@
         <div class="foot">
             <h1>Пишите/Звоните</h1>
             <ul>
-                <li><span><img src="/images/tell.png" alt="Tell"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
-                <li><span><img src="/images/telegram.png" alt="Telegram"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
-                <li><span><img src="/images/call.png" alt="Call"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
+                <li><span><img src="./images/tell.png" alt="Tell"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
+                <li><span><img src="./images/telegram.png" alt="Telegram"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
+                <li><span><img src="./images/call.png" alt="Call"><a href="tel:+7-903-905-56-65"></a><span>+7-903-905-56-65</span></li>
             </ul>
         </div>
         <div class="foot2">
